Change boolean to not be nullable for budget status, add budget type and IsOpen columns to budget item. update dialogs and views for new properties.

--- a/BudgetKeeper/Pages/Dialogs/PayoffDebtConfirmationModal.cshtml
+++ b/BudgetKeeper/Pages/Dialogs/PayoffDebtConfirmationModal.cshtml
@@ -8,3 +8,9 @@
 <h2>@Model.DebtName - @Model.DebtAmount Remaining</h2>
 
 <p>Marking this debt as paid off cannot be reversed. to re-instate a debt, a new debt will have to be added</p>
+
+@if(Model.BudgetType == Domain.Entities.BudgetType.CreditCard)
+{
+    <p>Close Card on Payoff: <input type="checkbox" asp-for="@Model.CloseCard" /></p>
+    
+}
