--- a/BudgetKeeper/Pages/Dialogs/CreateItemModal.cshtml
+++ b/BudgetKeeper/Pages/Dialogs/CreateItemModal.cshtml
@@ -1,4 +1,5 @@
 ﻿@model BudgetKeeper.Domain.Entities.BudgetItem
+@using BudgetKeeper.Domain.Entities
 @{
 }
 
@@ -12,4 +13,14 @@
 <br />
 <div class="form-group">
     Monthly Payment: <input asp-for="@Model.MonthlyPayment" />
+</div>
+
+<div class="form-group">
+    Is Open: <input type="checkbox" asp-for="@Model.IsOpen" />
+</div>
+
+<div class="form-group">
+    Debt Type: <select asp-for="@Model.BudgetType" asp-items="Html.GetEnumSelectList<BudgetType>()">
+                    <option selected="selected" value="">Please select</option>
+               </select>
 </div>
