--- a/BudgetKeeper/Pages/Dialogs/CreateItemModal.cshtml
+++ b/BudgetKeeper/Pages/Dialogs/CreateItemModal.cshtml
@@ -20,7 +20,15 @@
 </div>
 
 <div class="form-group">
-    Debt Type: <select asp-for="@Model.BudgetType" asp-items="Html.GetEnumSelectList<BudgetType>()">
+    Debt Type: <select id="budgetTypeDropdown" asp-for="@Model.BudgetType" asp-items="Html.GetEnumSelectList<BudgetType>()" onchange="setVisibility()">
                     <option selected="selected" value="">Please select</option>
                </select>
 </div>
+
+<script>
+    function setVisibility()
+    {
+        var budgetType = $('#budgetTypeDropdown').find(":selected").val();
+        alert(budgetType);
+    }
+</script>
