--- a/BudgetKeeper/Pages/Dialogs/CreateItemModal.cshtml
+++ b/BudgetKeeper/Pages/Dialogs/CreateItemModal.cshtml
@@ -20,15 +20,7 @@
 </div>
 
 <div class="form-group">
-    Debt Type: <select id="budgetTypeDropdown" asp-for="@Model.BudgetType" asp-items="Html.GetEnumSelectList<BudgetType>()" onchange="setVisibility()">
+    Debt Type: <select id="budgetTypeDropdown" asp-for="@Model.BudgetType" asp-items="Html.GetEnumSelectList<BudgetType>()" >
                     <option selected="selected" value="">Please select</option>
                </select>
 </div>
-
-<script>
-    function setVisibility()
-    {
-        var budgetType = $('#budgetTypeDropdown').find(":selected").val();
-        alert(budgetType);
-    }
-</script>
